--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ dependencies {
 
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 
+    //MyBatis
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
+
+    //Thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 tasks.named('test') {
